--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Tribute Page</title>
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+  integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
 
 
@@ -16,29 +17,44 @@
 
     <div id="wrapper" class="container">
 
-      <div class="pt-3 pb-3">
-        <img src="http://www.ekapija.com/thumbs/milutin_milankovic_060815_tw1024.jpg" class="img-fluid mx-auto" alt="Milutin Milankovic">
+      <div id="header">
+        <div class="pt-5 pb-3">
+          <img src="http://www.ekapija.com/thumbs/milutin_milankovic_060815_tw1024.jpg"
+          class="img-fluid mx-auto" alt="Milutin Milankovic">
+        </div>
+        <div class="text-center pb-4">
+          <h1>Milutin Milanković</h1>
+          <h3>1879 - 1958</h3>
+        </div>
       </div>
-      <div class="text-center pt-3 pb-5">
-        <h1>Milutin Milankovic</h1>
-        <h3>1879 - 1958</h3>
-      </div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ratione odit,
-        consectetur possimus nesciunt commodi eius. Saepe fugit alias, esse perferendis
-        sapiente eum neque minus amet nulla blanditiis, facere reprehenderit.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ratione odit,
-        consectetur possimus nesciunt commodi eius. Saepe fugit alias, esse perferendis
-        sapiente eum neque minus amet nulla blanditiis, facere reprehenderit.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ratione odit,
-        consectetur possimus nesciunt commodi eius. Saepe fugit alias, esse perferendis
-        sapiente eum neque minus amet nulla blanditiis, facere reprehenderit.
-      </p>
+      <div id="content">
+        <p>
+          <strong>Milutin Milanković</strong> <small>(Милутин Миланковић, 28 May 1879 – 12 December 1958)</small> was a Serbian mathematician,
+          astronomer, climatologist, geophysicist, civil engineer, doctor of technology, university professor and
+          popularizer of science. Milanković gave two fundamental contributions to global science. The first
+          contribution is the <span>Canon of the Earth’s Insolation</span>, which characterizes the climates of all the
+          planets of the Solar system. The second contribution is the explanation of Earth's long-term climate
+          changes caused by changes in the position of the Earth in comparison to the Sun, now known as <span>Milankovitch
+           cycles (11 Ice Ages)</span>. This explained the <span>ice ages</span> occurring in the geological past of the Earth, as well
+           as the <span>climate changes</span> on the Earth which can be expected in the future.
+        </p>
 
+        <div>
+          <p>Important  dates</p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
     </div>
 
 </body>
