--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="wrapper" class="container">
 
-      <div id="header">
+      <header>
         <div class="pt-5 pb-3">
           <img src="http://www.ekapija.com/thumbs/milutin_milankovic_060815_tw1024.jpg"
           class="img-fluid mx-auto" alt="Milutin Milankovic">
@@ -26,7 +26,7 @@
           <h1>Milutin Milanković</h1>
           <h3>1879 - 1958</h3>
         </div>
-      </div>
+      </header>
       <div id="content">
         <p>
           <strong>Milutin Milanković</strong> <small>(Милутин Миланковић, 28 May 1879 – 12 December 1958)</small> was a Serbian mathematician,
@@ -38,23 +38,41 @@
            cycles (11 Ice Ages)</span>. This explained the <span>ice ages</span> occurring in the geological past of the Earth, as well
            as the <span>climate changes</span> on the Earth which can be expected in the future.
         </p>
-
-        <div>
-          <p>Important  dates</p>
+        <div id="years">
+          <p><strong>Important  years</strong></p>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><span>1879</span>  born in Dalj, Austria-Hungury(modern Crotia).</li>
+            <li><span>1896</span>  finished secondary school in Osijek.</li>
+            <li><span>1902</span>  graduated from Vienna University of Technology with best marks.</li>
+            <li><span>1904</span>  at age of 25 he gained Ph.D., his thesis was entitled Contribution to the Theory of Pressure Curves
+            (Beitrag zur Theorie der Druck-kurven)</li>
+            <li><span>1909</span>  became a teacher at University of Belgrade.</li>
+            <li><span>1912</span>  published "Contribution to the mathematical theory of climate"</li>
+            <li><span>1913</span>  published "Distribution of the sun radiation on the earth's surface".</li>
+            <li><span>1914</span>  published "About the issue of the astronomical theory of ice ages".</li>
+            <li><span>1916</span>  published "Investigation of the climate of the planet Mars".</li>
+            <li><span>1919</span>  return to Belgrade.</li>
+            <li><span>1920</span>  publiched a book "Mathematical Theory of Heat Phenomena Produced by Solar Radiation".</li>
+            <li><span>1924</span>  became a full member of Serbian Academy of Sciences and Arts.</li>
+            <li><span>1934</span>  published a book "Celestial Mechanics".</li>
+            <li><span>1939</span>  began work on "Canon of Insolation of the Earth and Its Application to the Problem of the Ice Ages", it was publish on Serbian and German during the war.</li>
+            <li><span>1954</span>  received the Golden Doctor's diploma from the Technical University of Vienna.</li>
+            <li><span>1958</span>  suffered a stroke and died in Belgrade, He is buried in his family cemetery in Dalj.</li>
             <li></li>
           </ul>
         </div>
       </div>
+
+      <div id="sid">
+        <p>In case you taught of him :D</p>
+        <div>
+          <img src="https://s-media-cache-ak0.pinimg.com/736x/18/a2/4a/18a24a79e8b643580595a0b84fbac547.jpg" class="img-fluid mx-auto" alt="Sid from Ice Age">
+        </div>
+      </div>
+
+      <footer>
+        <p>For more information go to <a href="https://en.wikipedia.org/wiki/Milutin_Milankovi%C4%87">Wiki</a>.</p>
+      </footer>
     </div>
 
 </body>
